copyright page updated

--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
       </div>
 
       <p>&copy; <script>document.write(new Date().getFullYear())</script> Keshav Neupane. All rights reserved.</p>
+      <div class="credits">
+        Designed and developed by <a href="https://poudelmadhav.com.np">Madhav Paudel</a>
+      </div>
     </div>
   </div>
   <!-- End section footer -->
