--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
 
                 <div class="col-lg-12">
-                  <input type="submit" class="btn btn-defeault btn-send" value="Send message">
+                  <button type="submit" class="btn btn-defeault btn-send btn-block" id="submit-btn">Send message</button>
                 </div>
 
               </div>
@@ -212,7 +212,7 @@
   <script src="lib/isotope/isotope.pkgd.min.js"></script>
 
   <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
+  <script src="contactform/contactform.js?version=1"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
