--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
-  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="lib/bootstrap/css/bootstrap.min.css?version=1" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
-  <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/ionicons/css/ionicons.min.css?version=1" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css?version=1" rel="stylesheet">
   <link href="lib/magnific-popup/magnific-popup.css" rel="stylesheet">
-  <link href="lib/hover/hover.min.css" rel="stylesheet">
+  <link href="lib/hover/hover.min.css?version=1" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
@@ -130,7 +130,7 @@
           <div class="col-lg-6">
             <form action="" method="post" role="form" class="contactForm">
               <input type="hidden" name="contact[_subject]"value="[Keshav Neupane] Contact" />
-              <input type="hidden" name="contact[_email]"value="poudelmadhav143@gmail.com" />
+              <input type="hidden" name="contact[_email]"value="neupanekeshav414@gmail.com" />
               <div class="row">
 
                 <div id="sendmessage">Your message has been sent. Thank you!</div>
@@ -203,19 +203,19 @@
   <!-- End section footer -->
 
   <!-- JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/jquery/jquery-migrate.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="lib/jquery/jquery.min.js?version=1"></script>
+  <script src="lib/jquery/jquery-migrate.min.js?version=1"></script>
+  <script src="lib/bootstrap/js/bootstrap.bundle.min.js?version=1"></script>
   <script src="lib/typed/typed.js"></script>
-  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-  <script src="lib/magnific-popup/magnific-popup.min.js"></script>
-  <script src="lib/isotope/isotope.pkgd.min.js"></script>
+  <script src="lib/owlcarousel/owl.carousel.min.js?version=1"></script>
+  <script src="lib/magnific-popup/magnific-popup.min.js?version=1"></script>
+  <script src="lib/isotope/isotope.pkgd.min.js?version=1"></script>
 
   <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js?version=1"></script>
 
   <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
+  <script src="js/main.js?version=1"></script>
 
 </body>
 
